Bug 42199 - Fix my misreading of "clear to the last marker" in the HTML5 spec
Summary: Fix my misreading of "clear to the last marker" in the HTML5 spec
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-13 14:25 PDT by Eric Seidel (no email)
Modified: 2010-07-13 18:12 PDT (History)
2 users (show)

See Also:


Attachments
Patch (6.61 KB, patch)
2010-07-13 14:26 PDT, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-13 14:25:27 PDT
Fix my misreading of "clear to the last marker" in the HTML5 spec
Comment 1 Eric Seidel (no email) 2010-07-13 14:26:31 PDT
Created attachment 61415 [details]
Patch
Comment 2 Adam Barth 2010-07-13 14:31:09 PDT
Comment on attachment 61415 [details]
Patch

Ok.  I feel like the loop could be slightly more elegant, but I'm not immediately sure how.
Comment 3 Eric Seidel (no email) 2010-07-13 14:34:15 PDT
Yeah.  I was trying to avoid any posible copy of the Entry, which would cause us to ref the Element needlessly.
Comment 4 WebKit Commit Bot 2010-07-13 18:12:07 PDT
Comment on attachment 61415 [details]
Patch

Clearing flags on attachment: 61415

Committed r63274: <http://trac.webkit.org/changeset/63274>
Comment 5 WebKit Commit Bot 2010-07-13 18:12:11 PDT
All reviewed patches have been landed.  Closing bug.