WebCore/html/HTMLFormattingElementList.h
@@ -114,6 +114,7 @@ public:
     void insertAt(Element*, const Bookmark&);
 
     void appendMarker();
+    // clearToLastMarker also clears the marker (per the HTML5 spec).
     void clearToLastMarker();
 
     const Entry& at(size_t i) const { return m_entries[i]; }
